  required changing the .pyc magic number.  This means that .pyc files
  generated before 2.5c2 will be regenerated.

- with and as are now keywords.

- Bug #1664966: Fix crash in exec if Unicode filename can't be decoded.

- Issue #1537: Changed GeneratorExit's base class from Exception to
  BaseException.

Library
-------

- #856047: respect the ``no_proxy`` environment variable when using the
  ``http_proxy`` etc. environment variables in urllib.

- #1178141: add a getcode() method to the addinfourls that urllib.open()
  returns so that you can retrieve the HTTP status code.

- Issue #1003: Fix zipfile decryption check, it would fail zip files
  with extended local headers.

- #1189216: Fix the zipfile module to work on archives with headers
  past the 2**31 byte boundary.

- #1336: fix a race condition in subprocess.Popen if the garbage
  collector kicked in at the wrong time that would cause the process
  to hang when the child wrote to stderr.

- #1146: fix how textwrap breaks a long word that would start in the
  last column of a line.

- #1693149: trace.py --ignore-module - accept multiple comma-separated
  modules to be given.

- #1822: MIMEMultipart.is_multipart() behaves correctly for a just-created
  (and empty) instance. Thanks Jonathan Share.

- #1861: Added an attribute to the sched module which returns an ordered
  list of upcoming events (displayed as named tuples).

- #1837: The queue module now also supports a LIFO queue and a priority queue.

- Patch #1048820: Add insert-mode editing to curses.textpad.Textbox
  (patch by Stefan Wehr).  Also, fix an off-by-one bug in 
  Textbox.gather().

- Issue #1831: ctypes now raises a TypeError if conflicting positional
  and named arguments are passed to a Structure or Union initializer.
  When too many positional arguments are passed, also a TypeError is
  raised instead of a ValueError.

- Convert the internal ctypes array type cache to a WeakValueDict so
  that array types do not live longer than needed.